--- a/dev/style/sass/_footer.scss
+++ b/dev/style/sass/_footer.scss
@@ -26,6 +26,10 @@
           padding-right: .6em;
           
           border-right: 1px solid #fff;
+
+          a {
+            line-height: 2.5em;
+          }
           
           &:first-child {
             margin-left: 0;
